<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <EditText android:id="@+id/edit_input_date"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:hint="@string/edit_input_date" />
    <EditText android:id="@+id/edit_input_receipt"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:hint="@string/edit_input_receipt" />

    <EditText android:id="@+id/edit_input_value"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:hint="@string/edit_input_value" />
    <EditText android:id="@+id/edit_input_quantity"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:hint="@string/edit_input_quantity" />
    <EditText android:id="@+id/edit_input_stock"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:hint="@string/edit_input_stock" />
    <EditText android:id="@+id/edit_input_item"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:hint="@string/edit_input_item" />
    <EditText android:id="@+id/edit_input_provider"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:hint="@string/edit_input_provider" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_send"
        android:onClick="sendInputCreateMessage"/>
</LinearLayout>