<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <EditText android:id="@+id/edit_output_date"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:hint="@string/edit_output_date" />
    <EditText android:id="@+id/edit_output_receipt"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:hint="@string/edit_output_receipt" />

    <EditText android:id="@+id/edit_output_value"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:hint="@string/edit_output_value" />
    <EditText android:id="@+id/edit_output_quantity"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:hint="@string/edit_output_quantity" />
    <EditText android:id="@+id/edit_output_stock"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:hint="@string/edit_output_stock" />
    <EditText android:id="@+id/edit_output_item"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:hint="@string/edit_output_item" />
    <EditText android:id="@+id/edit_output_client"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:hint="@string/edit_output_client" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_send"
        android:onClick="sendOutputCreateMessage"/>
</LinearLayout>