<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <EditText android:id="@+id/edit_item_code"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:hint="@string/edit_item_code" />
    <EditText android:id="@+id/edit_item_name"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:hint="@string/edit_item_name" />
    <EditText android:id="@+id/edit_item_description"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:hint="@string/edit_item_description" />
    <EditText android:id="@+id/edit_item_balance"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:hint="@string/edit_item_balance" />
    <EditText android:id="@+id/edit_item_unit"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:hint="@string/edit_item_unit" />
    <EditText android:id="@+id/edit_item_stock"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:hint="@string/edit_item_stock" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_send"
        android:onClick="sendItemCreateMessage"/>
</LinearLayout>