<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <EditText android:id="@+id/edit_user_name"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:hint="@string/edit_user_name" />
    <EditText android:id="@+id/edit_user_email"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:hint="@string/edit_user_email" />
    <EditText android:id="@+id/edit_user_password"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:hint="@string/edit_user_password" />
    <EditText android:id="@+id/edit_user_role"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:hint="@string/edit_user_role" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_send"
        android:onClick="sendUserCreateMessage"/>
</LinearLayout>